fix(ui5-popover): fixed content truncation
#4259

--- a/packages/main/src/themes/Dialog.css
+++ b/packages/main/src/themes/Dialog.css
@@ -1,5 +1,4 @@
 :host {
-	min-width: 20rem;
 	min-height: 6rem;
 	max-height: 94%;
 	max-width: 90%;
